err/procfs.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/procfs'...
Compiling './lib/python3.5/site-packages/procfs/cli.py'...
***   File "./lib/python3.5/site-packages/procfs/cli.py", line 86
    print find(args.path, args.list)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/procfs/http.py'...
***   File "./lib/python3.5/site-packages/procfs/http.py", line 46
    print 'Starting server on %s:%d - use <Ctrl-C> to stop' \
                                                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/procfs/proc'...
Listing './lib/python3.5/site-packages/procfs/proc/fs'...
Listing './lib/python3.5/site-packages/procfs/processes'...
Listing './lib/python3.5/site-packages/procfs/processes/net'...
Listing './lib/python3.5/site-packages/procfs-0.5.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
